--- a/src/app/pages/locations/locations.component.css
+++ b/src/app/pages/locations/locations.component.css
@@ -13,6 +13,8 @@
 }
 
 .location-container{
+    display: flex;
+    flex-direction: column;
     width: 100%;
     background: #F7F7F7;
     box-shadow: 0px 3px 6px #D6D6D6;
