--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,7 +18,7 @@
                     <div class="dropdown my-auto">
                         <button style="color: white;" (click)="show=!show" class="btn Tajawal-Medium fs-20 btn-transparent bg-transparent d-flex dropdown-toggle" type="button" data-toggle="dropdown">
                           <i class="pi pi-user fs-5 mx-3"></i>
-                          <p>user</p>
+                          <p>{{userName}}</p>
                         </button>
                         <ul   [style.display]="show ? 'block' : 'none'" class="dropdown-menu text-end">
                           <li><a class="dropdown-item" (click)="logOut()"><i class="pi pi-sign-out mx-2"></i> تسجيل خروج</a></li>
