--- a/src/app/pages/client/client.component.html
+++ b/src/app/pages/client/client.component.html
@@ -1,4 +1,4 @@
-<div class="container h-100">
+<div class="container">
     <!-- Search Component -->
     <div class="search">
         <div class="row mt-130">
@@ -51,7 +51,7 @@
                         currentPage : page,
                         totalItems : AllclientsData?.length
                     }; let i = index ">
-                            <td>{{item.id}}</td>
+                            <td>{{item.id}}#</td>
                             <td>{{item.created_at.split('T')[0]}}</td>
                             <td>{{item.location.project_name}}</td>
                             <td>{{item.supplier_product}}</td>
