--- a/src/app/pages/supplier/supplier.component.css
+++ b/src/app/pages/supplier/supplier.component.css
@@ -1,8 +1,27 @@
-table {
-    border-radius: 20px !important;
+.main-data{
+    margin-bottom: 200px;
 }
 
-table thead th:last-child{
+table {
+    border-color:#9F9F9F !important
+}
+
+table a.detail-btn{
+    width: 156px;
+    height: 46px;
+    border: 1px solid #2A2A2C;
+    border-radius: 20px !important;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+table a.detail-btn:hover{
+    background-color: black;
+    color: white;
+}
+
+/* table thead th:last-child{
     border-top-left-radius: 20px !important;
     border-left: none !important;
 }
@@ -12,9 +31,8 @@ table thead th:first-child{
 }
     
 table tr:last-child td:last-child {
-    border: 2px solid green;
     border-bottom-right-radius: 10px;
-}
+} */
 
 table thead{
     vertical-align: middle !important;
@@ -28,9 +46,16 @@ table thead tr th{
 }
 
 th, td {
-    border-left: 2px solid #9F9F9F;
-    border-right: 2px solid #9F9F9F;
-    border-collapse: collapse;
+    vertical-align: middle;
+    text-align: center;
+    font-family: "Tajawal-Bold";
+    font-size: 20px;
+    font-weight: 700;
+  }
+
+  td{
+    height: 93px;
+    background-color: transparent;
   }
 
 
