--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -1,3 +1,11 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="home-container">
+    <div class="navbar-container">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="home-body">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="footer-container">
+        <app-footer></app-footer>
+    </div>
+</div>
